# sshot

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: browser.rs  config.rs  convert.rs  devices.rs  main.rs  output.rs
