[package]
name = "sshot"
version = "0.1.0"
edition = "2024"
description = "A fast CLI tool for taking website screenshots"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"
image = "0.25"
ravif = "0.11"
rgb = "0.8"
tokio = { version = "1", features = ["full"] }
url = "2"
webp = "0.3"
